--- a/giF0S_Project/Styles/Styles.css
+++ b/giF0S_Project/Styles/Styles.css
@@ -31,6 +31,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -38,56 +44,132 @@ body {
 }
 
 #buttonZone #logotipe {
-  text-align: center;
-  margin-left: 6.9%;
-  margin-top: 35px;
-  margin-bottom: 19px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 91px;
+  margin-left: 6.3288%;
+  padding-left: 0.5565%;
+  padding-right: 0.2504%;
 }
 
 #buttonZone #buttonOne {
-  display: block;
-  width: 10.0140%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-right: 1.1137%;
+  margin-left: 47.6637%;
   height: 36px;
+  width: 10.0139%;
   background-color: #F7C9F3;
   color: #110038;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  margin-left: 47.6%;
-  margin-top: 44px;
-  margin-bottom: 38px;
   border: #110038 outset 1px;
   -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
 #buttonZone #buttonTwo {
-  display: block;
-  width: 9.11%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   height: 36px;
+  width: 9.1098%;
   background-color: #F7C9F3;
   color: #110038;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  margin-left: 1.1137%;
-  margin-top: 44px;
-  margin-bottom: 38px;
   border: #110038 outset 1px;
   -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+}
+
+#buttonZone #menuThemes {
+  display: none;
+  position: absolute;
+  top: 84px;
+  right: 15.7%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #E6E6E6;
+  width: 11.82%;
+  height: 102px;
+  padding-left: 0px;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  list-style: none;
+}
+
+#buttonZone #menuThemes a {
+  text-decoration: none;
+}
+
+#buttonZone #menuThemes .day {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  width: 150px;
+  height: 36px;
+  background-color: #FFF4FD;
+  border: #CCA6C9 1px solid;
+  -webkit-box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+  color: #110038;
+}
+
+#buttonZone #menuThemes .night {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  width: 150px;
+  height: 36px;
+  background-color: #F0F0F0;
+  border: #808080 1px solid;
+  -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+  color: #110038;
 }
 
 #buttonZone #themes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 2.504%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 2.5%;
   height: 36px;
   background-color: #F7C9F3;
-  margin-left: 0%;
-  margin-top: 44px;
-  margin-bottom: 38px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -99,11 +181,15 @@ body {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#buttonZone p {
-  margin-right: 83, 4492%;
-  margin-left: 1.147%;
+#buttonZone #linkMyGifos {
+  display: block;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 85px;
+  margin-left: 1.1474%;
   color: #110038;
-  font-size: 100%;
+  font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
 }
@@ -317,7 +403,9 @@ body {
   margin-left: 6.955%;
 }
 
-#gifSuggest #gifSuggest2, #gifSuggest #gifSuggest3, #gifSuggest #gifSuggest4 {
+#gifSuggest #gifSuggest2,
+#gifSuggest #gifSuggest3,
+#gifSuggest #gifSuggest4 {
   margin-left: 0.5565%;
 }
 
