--- a/giF0S_Project/Theme2/Styles2/Styles2.css
+++ b/giF0S_Project/Theme2/Styles2/Styles2.css
@@ -27,7 +27,7 @@ body {
   color: #FFFFFF;
 }
 
-#buttonzone {
+#buttonZone {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,14 +37,14 @@ body {
   height: 118px;
 }
 
-#buttonzone #logotipe {
+#buttonZone #logotipe {
   text-align: center;
   margin-left: 6.9%;
   margin-top: 35px;
   margin-bottom: 19px;
 }
 
-#buttonzone #buttonOne {
+#buttonZone #buttonOne {
   display: block;
   width: 10.0140%;
   height: 36px;
@@ -53,15 +53,15 @@ body {
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  margin-left: 47.6%;
   margin-top: 44px;
+  margin-left: 47.6%;
   margin-bottom: 38px;
   border: #110038 outset 1px;
   -webkit-box-shadow: inset -1px -1px 0 0 #EE3EFE, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #EE3EFE, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#buttonzone #buttonTwo {
+#buttonZone #buttonTwo {
   display: block;
   width: 9.11%;
   height: 36px;
@@ -78,7 +78,7 @@ body {
           box-shadow: inset -1px -1px 0 0 #EE3EFE, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#buttonzone #themes {
+#buttonZone #themes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -101,7 +101,7 @@ body {
           box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 1px 0 0 0 #FFFFFF;
 }
 
-#buttonzone p {
+#buttonZone p {
   margin-right: 83, 4492%;
   margin-left: 1.147%;
   color: #FFFFFF;
@@ -110,7 +110,7 @@ body {
   font-family: "Chakra Petch";
 }
 
-#searchbox {
+#searchBox {
   background-color: #B4B4B4;
   width: 83.45%;
   height: 99px;
@@ -119,7 +119,7 @@ body {
           box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #8F8F8F;
 }
 
-#searchbox #searchBoxTitle {
+#searchBox #searchBoxTitle {
   background: -webkit-gradient(linear, right top, left top, from(#EE3EFE), to(#2E32FB));
   background: linear-gradient(270deg, #EE3EFE 0%, #2E32FB 100%);
   -webkit-box-shadow: inset 2px 0 0 0 #B4B4B4, inset 0 4px 0 0 #B4B4B4, inset -2px 0 0 0 #B4B4B4;
@@ -129,7 +129,7 @@ body {
   margin-left: 0.25%;
 }
 
-#searchbox h2 {
+#searchBox h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,7 +145,7 @@ body {
   border-top: solid 2px #FFFFFF;
 }
 
-#searchbox #formSearch {
+#searchBox #formSearch {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,7 +158,7 @@ body {
           align-items: center;
 }
 
-#searchbox #formSearch #mySearch {
+#searchBox #formSearch #mySearch {
   width: 88.08%;
   height: 48px;
   margin-left: 15px;
@@ -167,35 +167,35 @@ body {
           box-shadow: inset 2px 2px 0 0 #000000, inset -2px -2px 0 0 #E6E6E6;
 }
 
-#searchbox #formSearch #mySearch::-webkit-input-placeholder {
+#searchBox #formSearch #mySearch::-webkit-input-placeholder {
   color: #B4B4B4;
   font-size: 16px;
   font-family: "Chakra Petch";
   font-weight: 400;
 }
 
-#searchbox #formSearch #mySearch:-ms-input-placeholder {
+#searchBox #formSearch #mySearch:-ms-input-placeholder {
   color: #B4B4B4;
   font-size: 16px;
   font-family: "Chakra Petch";
   font-weight: 400;
 }
 
-#searchbox #formSearch #mySearch::-ms-input-placeholder {
+#searchBox #formSearch #mySearch::-ms-input-placeholder {
   color: #B4B4B4;
   font-size: 16px;
   font-family: "Chakra Petch";
   font-weight: 400;
 }
 
-#searchbox #formSearch #mySearch::placeholder {
+#searchBox #formSearch #mySearch::placeholder {
   color: #B4B4B4;
   font-size: 16px;
   font-family: "Chakra Petch";
   font-weight: 400;
 }
 
-#searchbox #formSearch #buttonSearch {
+#searchBox #formSearch #buttonSearch {
   text-align: center;
   margin-left: 8px;
   width: 8.5%;
@@ -210,7 +210,7 @@ body {
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#searchbox #formSearch #buttonSearch #buttonContent {
+#searchBox #formSearch #buttonSearch #buttonContent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -319,7 +319,9 @@ body {
   margin-left: 6.955%;
 }
 
-#gifSuggest #gifSuggest2, #gifSuggest #gifSuggest3, #gifSuggest #gifSuggest4 {
+#gifSuggest #gifSuggest2,
+#gifSuggest #gifSuggest3,
+#gifSuggest #gifSuggest4 {
   margin-left: 0.5565%;
 }
 
@@ -362,7 +364,7 @@ body {
   width: 16px;
   height: 14px;
   margin-right: 1.786%;
-  background-image: url(../Images/button3.svg);
+  background-image: url(../../Images/button3.svg);
   background-repeat: no-repeat;
   background-position: center;
   border-top: solid 1px #FFFFFF;
