--- a/giF0S_Project/Styles/Styles.css
+++ b/giF0S_Project/Styles/Styles.css
@@ -71,6 +71,11 @@ body {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
+#buttonZone #buttonOne:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
 #buttonZone #buttonTwo {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -85,6 +90,11 @@ body {
   border: #110038 outset 1px;
   -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+}
+
+#buttonZone #buttonTwo:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
 }
 
 #buttonZone #menuThemes {
@@ -116,6 +126,7 @@ body {
 }
 
 #buttonZone #menuThemes .day {
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -139,6 +150,7 @@ body {
 }
 
 #buttonZone #menuThemes .night {
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -181,17 +193,32 @@ body {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#buttonZone #linkMyGifos {
-  display: block;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  width: 85px;
+#buttonZone #themes:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+#buttonZone a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   margin-left: 1.1474%;
+}
+
+#buttonZone #linkMyGifos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 85px;
   color: #110038;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
+}
+
+#buttonZone #linkMyGifos:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
 }
 
 #searchBox {
@@ -243,12 +270,18 @@ body {
 }
 
 #searchBox #mySearch {
+  caret-color: #4180F6;
+  color: #110038;
+  font-size: 16px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
   width: 88.08%;
   height: 48px;
   margin-left: 15px;
   border: solid 1px #979797;
   -webkit-box-shadow: inset -1px -1px 0 0 #E6E6E6, inset 1px 1px 0 0 #000000;
           box-shadow: inset -1px -1px 0 0 #E6E6E6, inset 1px 1px 0 0 #000000;
+  list-style: lower-alpha;
 }
 
 #searchBox #mySearch::-webkit-input-placeholder {
@@ -306,10 +339,24 @@ body {
       justify-content: space-around;
 }
 
+#searchBox #buttonSearchInput {
+  text-align: center;
+  margin-left: 8px;
+  width: 8.5%;
+  height: 36px;
+  background-color: #F7C9F3;
+  border: 1px solid #110038;
+  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  color: #110038;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+}
+
 #subMenuSearch {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: relative;
+  z-index: 2;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -327,13 +374,31 @@ body {
   width: 87.9166%;
   height: 34px;
   margin-left: 1.3333%;
+  font-size: 16px;
+  font-family: "Chakra Petch";
+  color: #110038;
 }
 
 #subMenuSearch #resultSearch {
   margin-top: 17px;
+  text-align: left;
+  background-color: #f0f0f0;
+  border: solid 1px #808080;
+  -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+}
+
+#subMenuSearch #resultSearch:hover {
+  background-color: #DBDBDB;
+  border: #808080 1PX solid;
+  -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
 }
 
 #subMenuSearch #similarResult {
+  text-align: left;
   margin-top: 11px;
   background-color: #f0f0f0;
   border: solid 1px #808080;
@@ -341,12 +406,31 @@ body {
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
+#subMenuSearch #similarResult:hover {
+  background-color: #DBDBDB;
+  border: #808080 1PX solid;
+  -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
 #subMenuSearch #otherOneResult {
+  text-align: left;
   margin-top: 10px;
   background-color: #f0f0f0;
   border: solid 1px #808080;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+}
+
+#subMenuSearch #otherOneResult:hover {
+  background-color: #DBDBDB;
+  border: #808080 1PX solid;
+  -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
 }
 
 #suggestions #suggest {
@@ -427,7 +511,12 @@ body {
   width: 97.22277%;
 }
 
-#gifSuggest .hashtagGif {
+#gifSuggest .borderShadowGif img:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -1px;
+}
+
+#gifSuggest p {
   color: #FFFFFF;
   font-size: 14px;
   font-family: "Chakra Petch";
@@ -472,6 +561,11 @@ body {
   border: solid 1px #4C2F99;
   -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #284F99;
           box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #284F99;
+}
+
+#gifSuggest .seeMoreButton:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -5px;
 }
 
 #trendsSection #trends {
@@ -530,6 +624,11 @@ body {
   width: 100%;
 }
 
+.trendsCharge img:hover {
+  outline: 1px dotted #110038;
+  outline-offset: -1px;
+}
+
 .trendsCharge #gifSuggest5 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -538,29 +637,47 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-right: 0.3478%;
+  margin-right: 0.5565%;
   margin-left: 0%;
-  height: 304px;
-  width: 20.4461%;
+  height: 298px;
+  width: 20.0289%;
   background-color: #E6E6E6;
-  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-.trendsCharge #gifSuggest5 img {
+.trendsCharge #gifSuggest5:hover {
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  margin-right: 0.3478%;
+  width: 20.4461%;
+  height: 304px;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+.trendsCharge #gifSuggest5:hover img {
   position: relative;
   z-index: 1;
-  left: 3px;
+  left: 4px;
   bottom: 18px;
   height: 100%;
   width: 97.2778%;
-  border: dotted #110038 1px;
 }
 
-.trendsCharge #gifSuggest5 div {
+.trendsCharge #gifSuggest5:hover p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.trendsCharge #gifSuggest5 img {
+  height: 100%;
+  width: 100%;
+}
+
+.trendsCharge #gifSuggest5 p {
+  display: none;
   position: relative;
-  z-index: 4;
-  top: 284px;
+  z-index: 3;
   color: #FFFFFF;
   font-size: 14px;
   font-family: "Chakra Petch";
@@ -568,19 +685,23 @@ body {
   width: 97.2778%;
   height: 24px;
   margin-left: 1.3943%;
-  margin-bottom: 4px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  -webkit-transform: translateY(277px);
+          transform: translateY(277px);
   background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-}
-
-.trendsCharge #gifSuggest6 {
-  margin-left: 0.3478%;
 }
 
 .trendsCharge .secondaryTrendsCharge {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
   background: #E6E6E6;
   height: 298px;
   width: 20.0289%;
@@ -588,12 +709,98 @@ body {
   margin-left: 0.5565%;
 }
 
+.trendsCharge .secondaryTrendsCharge:hover {
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  margin-right: 0.3478%;
+  width: 20.4461%;
+  height: 304px;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+.trendsCharge .secondaryTrendsCharge:hover img {
+  position: absolute;
+  z-index: 1;
+  left: 4px;
+  bottom: 2px;
+  height: 98%;
+  width: 97.2778%;
+}
+
+.trendsCharge .secondaryTrendsCharge:hover p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.trendsCharge .secondaryTrendsCharge img {
+  height: 100%;
+  width: 100%;
+}
+
+.trendsCharge .secondaryTrendsCharge p {
+  display: none;
+  position: relative;
+  z-index: 3;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 700;
+  width: 97.2778%;
+  height: 24px;
+  margin-left: 1.3943%;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  -webkit-transform: translateY(277px);
+          transform: translateY(277px);
+  background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
+  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+}
+
 .trendsCharge .bigLeftTrendsCharge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
   width: 41.1693%;
   height: 298px;
   margin-right: 0.5565%;
   margin-left: 0%;
   background: #E6E6E6;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: "Chakra Petch";
+}
+
+.trendsCharge .bigLeftTrendsCharge:hover {
+  margin-right: 0.3478%;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  width: 41.5865%;
+  height: 304px;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+.trendsCharge .bigLeftTrendsCharge:hover img {
+  position: absolute;
+  z-index: 1;
+  width: 99%;
+  height: 98%;
+  top: 3px;
+  left: 3px;
+}
+
+.trendsCharge .bigLeftTrendsCharge:hover p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .trendsCharge .bigLeftTrendsCharge img {
@@ -601,17 +808,102 @@ body {
   height: 100%;
 }
 
+.trendsCharge .bigLeftTrendsCharge p {
+  display: none;
+  position: relative;
+  z-index: 5;
+  -webkit-transform: translateY(275px);
+          transform: translateY(275px);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  margin-left: 0.7%;
+  height: 24px;
+  width: 98.7%;
+  background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
+  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+}
+
 .trendsCharge .bigRightTrendsCharge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
   width: 41.1693%;
   height: 298px;
   margin-right: 0.5565%;
   margin-left: 0.5565%;
   background: #E6E6E6;
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: "Chakra Petch";
+}
+
+.trendsCharge .bigRightTrendsCharge:hover {
+  margin-right: 0.3478%;
+  margin-left: 0.3478%;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+  width: 41.5865%;
+  height: 304px;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+.trendsCharge .bigRightTrendsCharge:hover img {
+  position: absolute;
+  z-index: 1;
+  width: 99%;
+  height: 98%;
+  top: 3px;
+  left: 3px;
+}
+
+.trendsCharge .bigRightTrendsCharge:hover p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .trendsCharge .bigRightTrendsCharge img {
   width: 100%;
   height: 100%;
+}
+
+.trendsCharge .bigRightTrendsCharge p {
+  display: none;
+  position: relative;
+  z-index: 5;
+  -webkit-transform: translateY(275px);
+          transform: translateY(275px);
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  margin-left: 0.7%;
+  height: 24px;
+  width: 98.7%;
+  background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
+  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
+}
+
+.trendsCharge #gifSuggest8 p,
+.trendsCharge #gifSuggest11 p,
+.trendsCharge #gifSuggest18 p,
+.trendsCharge #gifSuggest21 p,
+.trendsCharge #gifSuggest28 p {
+  width: 97%;
+  bottom: 0px;
+}
+
+.trendsCharge #gifSuggest14 p,
+.trendsCharge #gifSuggest24 p {
+  width: 98.4%;
+  left: 0.3px;
 }
 
 .trendsCharge #gifSuggest12,
