--- a/giF0S_Project/Styles/Styles.scss
+++ b/giF0S_Project/Styles/Styles.scss
@@ -61,6 +61,11 @@ body {
         font-family: $primaryfont;
         border: $outsidebordercolor outset 1px;
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
 
 
@@ -77,9 +82,12 @@ body {
         border: $outsidebordercolor outset 1px;
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
 
-        
-
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
+
     #menuThemes {
         display: none;
         position: absolute;
@@ -95,11 +103,12 @@ body {
         box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
         list-style: none;
 
-        a{
+        a {
             text-decoration: none;
         }
 
         .day {
+            cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -116,6 +125,7 @@ body {
         }
 
         .night {
+            cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -144,21 +154,32 @@ body {
         background-repeat: no-repeat;
         border: $outsidebordercolor outset 1px;
         box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
+    }
+
+    a {
+        display: flex;
+        margin-left: 1.1474%;
     }
 
     #linkMyGifos {
-        display: block;
-        align-self: center;
+        display: flex;
         width: 85px;
-        margin-left: 1.1474%;
         color: $outsidebordercolor;
         font-size: 16px;
         font-weight: 400;
         font-family: $primaryfont;
+
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
-
 }
-
 
 #searchBox {
     background-color: $backgroundcolorsearchbox;
@@ -194,11 +215,17 @@ body {
     }
 
     #mySearch {
+        caret-color: #4180F6;
+        color: $outsidebordercolor;
+        font-size: 16px;
+        font-family: $primaryfont;
+        font-weight: 400;
         width: 88.08%;
         height: 48px;
         margin-left: 15px;
         border: solid 1px #979797;
         box-shadow: inset -1px -1px 0 0 $backgroundcolorsearchbox, inset 1px 1px 0 0 #000000;
+        list-style: lower-alpha;
 
         &::placeholder {
             color: $searchBarColor;
@@ -208,6 +235,7 @@ body {
         }
     }
 
+    //THESE ARE THE STYLES OF THE SEARCH BUTTON AND THE CLASS WHOSE STYLES ARE APPLIED WHEN THE USER ARE ENTERING A TEXT FOR SEARCH
     #buttonSearch {
         text-align: center;
         margin-left: 8px;
@@ -227,10 +255,26 @@ body {
             justify-content: space-around;
         }
     }
+
+    #buttonSearchInput {
+        text-align: center;
+        margin-left: 8px;
+        width: 8.5%;
+        height: 36px;
+        background-color: #F7C9F3;
+        border: 1px solid $outsidebordercolor;
+        box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+        color: $outsidebordercolor;
+        font-size: 16px;
+        font-weight: 400;
+        font-family: $primaryfont;
+    }
 }
 
+//THESE ARE THE STYLES OF THE SUBMENU THAT IS SHOWN AFTER THE CLICK OVER THE SEARCH BUTTON
 #subMenuSearch {
-    display: flex;
+    position: relative;
+    z-index: 2;
     flex-direction: column;
     width: 100%;
     height: 160px;
@@ -243,24 +287,57 @@ body {
         width: 87.9166%;
         height: 34px;
         margin-left: 1.3333%;
+        font-size: 16px;
+        font-family: $primaryfont;
+        color: $outsidebordercolor;
     }
 
     #resultSearch {
         margin-top: 17px;
+        text-align: left;
+        background-color: #f0f0f0;
+        border: solid 1px #808080;
+        box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            background-color: #DBDBDB;
+            border: #808080 1PX solid;
+            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
 
     #similarResult {
+        text-align: left;
         margin-top: 11px;
         background-color: #f0f0f0;
         border: solid 1px #808080;
         box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            background-color: #DBDBDB;
+            border: #808080 1PX solid;
+            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
 
     #otherOneResult {
+        text-align: left;
         margin-top: 10px;
         background-color: #f0f0f0;
         border: solid 1px #808080;
         box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+
+        &:hover {
+            background-color: #DBDBDB;
+            border: #808080 1PX solid;
+            box-shadow: inset -1px -1px 0 0 $searchBarColor, inset 1px 1px 0 0 $fontcolorheader;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+        }
     }
 }
 
@@ -313,10 +390,15 @@ body {
             left: 4px;
             height: 280px;
             width: 97.22277%;
+
+            &:hover {
+                outline: 1px dotted $outsidebordercolor;
+                outline-offset: -1px;
+            }
         }
     }
 
-    .hashtagGif {
+    p {
         color: $fontcolorheader;
         font-size: 14px;
         font-family: $primaryfont;
@@ -359,6 +441,11 @@ body {
         background-color: #4180F6;
         border: solid 1px #4C2F99;
         box-shadow: inset 2px 2px 0 0 $fontcolorheader, inset -2px -2px 0 0 #284F99;
+
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -5px;
+        }
     }
 }
 
@@ -393,34 +480,55 @@ body {
         left: 0px;
         height: 298px;
         width: 100%;
+
+        &:hover {
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -1px;
+        }
     }
 
-    //THESE ARE THE STYLES TO THE ONLY GIF WITH BORDER  STYLE IN THE TRENDS SECTION
+    //THESE ARE THE STYLES OF THE TRENDS SECTION
     #gifSuggest5 {
         display: flex;
         flex-direction: column;
-        // justify-content: flex-end;
-        margin-right: 0.3478%;
+        margin-right: 0.5565%;
         margin-left: 0%;
-        height: 304px;
-        width: 20.4461%;
+        height: 298px;
+        width: 20.0289%;
         background-color: $backgroundcolorsearchbox;
-        box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
 
-        img {
-            position: relative;
-            z-index: 1;
-            left: 3px;
-            bottom: 18px;
-            height: 100%;
-            width: 97.2778%;
-            border: dotted $outsidebordercolor 1px;
+        &:hover {
+            box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
+            margin-right: 0.3478%;
+            width: 20.4461%;
+            height: 304px;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+
+            img {
+                position: relative;
+                z-index: 1;
+                left: 4px;
+                bottom: 18px;
+                height: 100%;
+                width: 97.2778%;
+            }
+
+            p {
+                display: flex;
+            }
+
         }
 
-        div {
+        img {
+            height: 100%;
+            width: 100%;
+        }
+
+        p {
+            display: none;
             position: relative;
-            z-index: 4;
-            top: 284px;
+            z-index: 3;
             color: $fontcolorheader;
             font-size: 14px;
             font-family: $primaryfont;
@@ -428,48 +536,204 @@ body {
             width: 97.2778%;
             height: 24px;
             margin-left: 1.3943%;
-            margin-bottom: 4px;
+            margin-bottom: 0px;
+            margin-top: 0px;
+            transform: translateY(277px);
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
         }
     }
 
-    #gifSuggest6 {
-        margin-left: 0.3478%;
-    }
-
     .secondaryTrendsCharge {
         display: flex;
+        flex-direction: column;
+        position: relative;
         background: $backgroundcolorsearchbox;
         height: 298px;
         width: 20.0289%;
         margin-right: 0.5565%;
         margin-left: 0.5565%;
+
+        &:hover {
+            box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
+            margin-right: 0.3478%;
+            width: 20.4461%;
+            height: 304px;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+
+            img {
+                position: absolute;
+                z-index: 1;
+                left: 4px;
+                bottom: 2px;
+                height: 98%;
+                width: 97.2778%;
+            }
+
+            p {
+                display: flex;
+            }
+
+        }
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
+
+        p {
+            display: none;
+            position: relative;
+            z-index: 3;
+            color: $fontcolorheader;
+            font-size: 14px;
+            font-family: $primaryfont;
+            font-weight: 700;
+            width: 97.2778%;
+            height: 24px;
+            margin-left: 1.3943%;
+            margin-bottom: 0px;
+            margin-top: 0px;
+            transform: translateY(277px);
+            background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
+        }
     }
 
+    // 
+
     .bigLeftTrendsCharge {
+        display: flex;
+        flex-direction: column;
+        position: relative;
         width: 41.1693%;
         height: 298px;
         margin-right: 0.5565%;
         margin-left: 0%;
         background: $backgroundcolorsearchbox;
+        color: #FFFFFF;
+        font-size: 14px;   
+        font-weight: 700;
+        font-family: $primaryfont;
+
+        &:hover {
+            margin-right: 0.3478%;
+            box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
+            width: 41.5865%;
+            height: 304px;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+
+            img {
+                position: absolute;
+                z-index: 1;
+                width: 99%;
+                height: 98%;
+                top: 3px;
+                left: 3px;
+            }
+
+            p {
+                display: flex;
+            }
+        }
 
         img {
             width: 100%;
             height: 100%;
         }
+
+        p {
+            display: none;
+            position: relative;
+            z-index: 5;
+            transform: translateY(275px);
+            margin-top: 0px;
+            margin-bottom: 0px;
+            padding-bottom: 0px;
+            margin-left: 0.7%;
+            height: 24px;
+            width: 98.7%;
+            background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
+
+        }
     }
 
     .bigRightTrendsCharge {
+        display: flex;
+        flex-direction: column;
+        position: relative;
         width: 41.1693%;
         height: 298px;
         margin-right: 0.5565%;
         margin-left: 0.5565%;
         background: $backgroundcolorsearchbox;
+        color: $fontcolorheader;
+        font-size: 14px;   
+        font-weight: 700;
+        font-family: $primaryfont;
+        
+        &:hover {
+            margin-right: 0.3478%;
+            margin-left: 0.3478%;
+            box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
+            width: 41.5865%;
+            height: 304px;
+            outline: 1px dotted $outsidebordercolor;
+            outline-offset: -4px;
+
+            img {
+                position: absolute;
+                z-index: 1;
+                width: 99%;
+                height: 98%;
+                top: 3px;
+                left: 3px;
+            }
+
+            p {
+                display: flex;
+         }
+        }
 
         img {
             width: 100%;
             height: 100%;
         }
+
+        p {
+            display: none;
+            position: relative;
+            z-index: 5;
+            transform: translateY(275px);
+            margin-top: 0px;
+            margin-bottom: 0px;
+            padding-bottom: 0px;
+            margin-left: 0.7%;
+            height: 24px;
+            width: 98.7%;
+            background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
+        }
+    }
+
+    #gifSuggest8,
+    #gifSuggest11,
+    #gifSuggest18,
+    #gifSuggest21,
+    #gifSuggest28 {
+        p {
+            width: 97%;
+            bottom: 0px;
+        }
+    }
+
+    #gifSuggest14,
+    #gifSuggest24 {
+        p {
+            width: 98.4%;
+            left: 0.3px;
+        }
+
+        ;
     }
 
     #gifSuggest12,
@@ -478,4 +742,10 @@ body {
     #gifSuggest25 {
         margin-left: 0px;
     }
+   
+    // #gifSuggest19, #gifSuggest19{
+    //     p{
+    //         color: #FFFFFF;
+    //     }        
+    // }
 }
